--- a/GALERIA.html
+++ b/GALERIA.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estiloGaleria.css">
 
 </head>
+
 <body>
-    <center>Nuestra Galeria</center>
+    <div class="contenedorGaleria">
+        <center>Nuestra Galeria</center>
 
-    <img src="img/Pua de raymondi.jpg" with= ""alt="">
-    <img src="img/Catarata.jpg" alt="">
-    <img src="img/Iglesia.jpg" alt="">
-    <img src="img/Mirador la picota.jpg" alt="">
-
+        <img src="img/Pua de raymondi.jpg" with="" alt="">
+        <img src="img/Catarata.jpg" alt="">
+        <img src="img/Iglesia.jpg" alt="">
+        <img src="img/Mirador la picota.jpg" alt="">
+    </div>
 </body>
 
 </html>
