--- a/index.html
+++ b/index.html
@@ -1,31 +1,309 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/estilos.css">
-    
-</head>
-<body>
-    
-    <header>
-        <ul>
-            <li>Inicio</li>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cantarell&family=Chelsea+Market&family=Monoton&display=swap"
+        rel="stylesheet">
+    <!--Estilos de paquetes-->
+    <link rel="stylesheet" href="css/estiloPaquete.css" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-        </ul>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+</head>
+
+<body>
+    <!--INICIO-->
+    <header class="site-header">
+        <div class="hero">
+            <div class="contenido-header">
+                <div class="row">
+                    <div class="col">
+                        <nav class="redes-sociales">
+                            <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        </nav>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-lg-4 col-md-12 col-sm-12">
+                        <div class="informacion">
+                            <p class="bienvenido">bienvenido Welcome YAYKUKAMUYCHIK</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 text-center ">
+                        <h1 class="Inicio">Ayacucho</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 col-md-4 col-sm-4 col-5 bot_inicio">
+                        <a href="#" class="boton">
+                            <span class="boton__texto">RESERVAR</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-8 col-sm-8 col-12">
+                        <h4 class="slogan">Nuestros viajes son más de lo que esperas.</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </header>
 
+    <!--INICIA DESTINOS-->
+    <div class="contenedorDestinos">
+        <div class="box">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="card" style="background-image: url(img/PODERJUDICIAL.png)">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <h3>Grandiosas vistas</h3>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 bot_destino">
+                                <a href="#" class="boton">
+                                    <span class="boton__texto">RESERVAR</span>
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card" style="background-image: url(img/ALTURAPOMACOCHA.png)">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <h3>Campamento al aire libre</h3>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 bot_destino">
+                                <a href="#" class="boton">
+                                    <span class="boton__texto">RESERVAR</span>
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-12">
+                    <div class="card" style="background-image: url(img/JRASAMBLEA.png)">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <h3>Planifica tu siguiente aventura con Assetur</h3>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 bot_destino">
+                                <a href="#" class="boton">
+                                    <span class="boton__texto">RESERVAR</span>
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 
 
+    <!--INICIA NOSOTROS-->
+    <div class="contenedorNosotros">
+        <div class="row">
+            <div class="col  text-center mb-4">
+                <h2 class="display-1 Nosotros"><b>NOSOTROS</b> </h2>
+            </div>
+        </div>
+        <div class="iconos-nosotros">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12">
 
-    <footer>
+                    <div class="iconos">
+                        <h3 class="tituNosotros">Seguridad</h3>
+                        <p style="text-align: justify">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit repellat enim magnam
+                            reiciendis pariatur aliquam dolorum autem? Ea, placeat? Odit nihil officiis eveniet
+                            voluptates, minus cupiditate soluta ea molestias fugiat.
 
-    </footer>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 ">
 
+                    <div class="iconos">
+                        <h3 class="tituNosotros">Precio</h3>
+                        <p style="text-align: justify">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit repellat enim magnam
+                            reiciendis pariatur aliquam dolorum autem? Ea, placeat? Odit nihil officiis eveniet
+                            voluptates, minus cupiditate soluta ea molestias fugiat.
+                        </p>
+
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 ">
+
+                    <div class="iconos">
+
+                        <h3 class="tituNosotros">Tiempo</h3>
+                        <p style="text-align: justify">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit repellat enim magnam
+                            reiciendis pariatur aliquam dolorum autem? Ea, placeat? Odit nihil officiis eveniet
+                            voluptates, minus cupiditate soluta ea molestias fugiat.
+                        </p>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <!--PAQUETES-->
+    <div class="ContenedorPaquete text-center ">
+
+        <div class="row">
+            <div class="col  text-center mb-4">
+                <h2 class="display-1 paquetes"><b> NUESTROS NUEVOS PAQUETES EN PROMOCION</b></h2>
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-lg-3 col-md-4 col-sm-6 ">
+                <div class="imagen_1 img-fluid">
+                    <div class="row ">
+                        <div class="col-lg-1">
+                            <h5 class="fs-4 name">Huancasancos pachapupum</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 bot-paquete">
+                            <button class="boton1">Vista Rápida</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 precio">
+                        <h2 class="fs-4">precio</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 ">
+                <div class="imagen_2 img-fluid">
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="fs-4 name">Aguas Turquesas</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col bot-paquete">
+                            <button class="boton2">Vista Rápida</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row precio">
+                    <div class="col-lg-12 ">
+                        <h2 class="fs-4">precio</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 ">
+                <div class="imagen_3 img-fluid">
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="fs-4 name">Pampa de Quinua</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col bot-paquete">
+                            <button class="boton3">Vista Rapida</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-12 precio">
+                        <h2 class="fs-4">precio</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 ">
+                <div class="imagen_4 img-fluid">
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="fs-4 name">Vilcas Huamán</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col bot-paquete">
+                            <button class="boton4">Vista Rapida</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row precio">
+                    <div class="col-lg-12 ">
+                        <h2 class="fs-4">precio</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+                <button class="botonCrear">CREAR PAQUETE</button>
+            </div>
+        </div>
+
+    </div>
+
+    <!--INICIA GALERÍA-->
+
+    <div class="contenedorGaleria">
+
+        <div class="row">
+            <div class="col-lg-12  text-center mb-4">
+                <h2 class="display-1 Galeria"> <b> NUESTRA GALERÍA </b></h2>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-lg-4 col-md-4 col-sm-6 ">
+                <img class="img-fluid" src="img/Pua de raymondi.jpg" alt="">
+
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 ">
+                <img class="img-fluid" src="img/Catarata.jpg" alt="">
+
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 ">
+                <img class="img-fluid" src="img/Iglesia.jpg" alt="">
+
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 ">
+                <img class="img-fluid" src="img/Mirador la picota.jpg" alt="">
+
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
