--- a/nostros.html
+++ b/nostros.html
@@ -9,8 +9,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="contenedor">
-        <h2 class=" fw-300 centrar-texto"> Mas sobre Nosotros</h2>
+    <div class="contenedorNosotros">
+        <h2 class=" fw-300 centrar-texto"> <b>Nosotros</b> </h2>
         <div class="iconos-nosotros">
 
             <div class="iconos">
