--- a/index.html
+++ b/index.html
@@ -25,47 +25,67 @@
 </head>
 
 <body>
-    <!--INICIO-->
-    <header class="site-header">
-        <div class="hero">
-            <div class="contenido-header">
-                <div class="row">
-                    <div class="col">
-                        <nav class="redes-sociales">
-                            <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
-                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                        </nav>
-                    </div>
-                </div>
-                <div class="row align-items-center">
-                    <div class="col-lg-4 col-md-12 col-sm-12">
-                        <div class="informacion">
-                            <p class="bienvenido">bienvenido Welcome YAYKUKAMUYCHIK</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-sm-12 text-center ">
-                        <h1 class="Inicio">Ayacucho</h1>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-3 col-md-4 col-sm-4 col-5 bot_inicio">
-                        <a href="#" class="boton">
-                            <span class="boton__texto">RESERVAR</span>
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12 col-md-8 col-sm-8 col-12">
-                        <h4 class="slogan">Nuestros viajes son más de lo que esperas.</h4>
-                    </div>
+    <!--CABECERA-->
+
+    <header class="header">
+        <div class="containerCabecera ">
+            <div class="row">
+                <div class="col logo-nav-container">
+                    <a href="#" class="Logo"><img src="/img/Logo-simple.png" style="width: 204px ;height:60px;" alt=""></a>
+                    <span class="Menu-icon">Ver menú</span>
+                    <nav class="navegacion">
+                        <ul class="show">
+                            <!--AQUI NECESITAMOS USAR js-->
+                            <li><a href="#">INICIO</a></li>
+                            <li><a href="#">DESTINOS</a></li>
+                            <li><a href="#">NOSOTROS</a></li>
+                            <li><a href="#">PAQUETES</a></li>
+                            <li><a href="#">GALERÍA</a></li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
-
     </header>
+    <!--INICIO-->
+
+    <div class="ContenedorInicio ">
+        <div class="contenido_inicio">
+            <div class="row">
+                <div class="col">
+                    <nav class="redes-sociales">
+                        <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    </nav>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                    <div class="informacion">
+                        <p class="bienvenido">bienvenido Welcome YAYKUKAMUYCHIK</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 text-center ">
+                    <h1 class="Inicio">Ayacucho</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-4 col-5 bot_inicio">
+                    <a href="#" class="boton">
+                        <span class="boton__texto">RESERVAR</span>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-8 col-sm-8 col-12">
+                    <h4 class="slogan">Nuestros viajes son más de lo que esperas.</h4>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!--INICIA DESTINOS-->
     <div class="contenedorDestinos">
@@ -124,11 +144,7 @@
                 </div>
             </div>
         </div>
-
     </div>
-
-
-
     <!--INICIA NOSOTROS-->
     <div class="contenedorNosotros">
         <div class="row">
@@ -179,7 +195,6 @@
             </div>
         </div>
     </div>
-
 
     <!--PAQUETES-->
     <div class="ContenedorPaquete text-center ">
@@ -276,6 +291,7 @@
 
     </div>
 
+
     <!--INICIA GALERÍA-->
 
     <div class="contenedorGaleria">
@@ -304,6 +320,57 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="contenedorFooter">
+            <div class="row">
+                <div class="col">
+                    <div class="row ">
+                        <h2>AV. Arenales 778, 
+                            San Juan Bautista - Ayacucho</h2>
+
+                    </div>
+                    <div class="row">
+                        <h2>066 314578 - 956874012</h2>
+
+                    </div>
+                    <div class="row">
+                        <h2>asseturtravel@gmail.com</h2>
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <h2>Inicio</h2>
+
+                    </div>
+                    <div class="row">
+                        <h2>Nosotros</h2>
+
+                    </div>
+                    <div class="row">
+                        <h2>Destinos</h2>
+
+                    </div>
+                    <div class="row">
+                        <h2>Paquetes</h2>
+
+                    </div>
+                    <div class="row">
+                        <h2>Galería</h2>
+
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col">
+                    <img src="/img/Logo-simple.png" alt="">
+                </div>
+                <div class="col ">
+                    <img src="/img/Logo-azul.png" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
